# avian_interpolation

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
crates/avian_interpolation2d/: Cargo.toml
crates/avian_interpolation2d/examples/: follow_object.rs  minimal.rs
crates/avian_interpolation2d/examples/util/: mod.rs
crates/avian_interpolation3d/: Cargo.toml
crates/avian_interpolation3d/examples/: follow_camera.rs  follow_object.rs  minimal.rs  split_screen_comparison.rs
crates/avian_interpolation3d/examples/util/: mod.rs
src/: interpolate.rs  lib.rs  lifecycle.rs  previous_transform.rs  transform_sync.rs
