[package]
name = "avian_interpolation3d"
version = "0.1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "/docs/",
    "/.github/",
]

[features]
default = [
    "3d",
]
3d = []

[lib]
name = "avian_interpolation3d"
path = "../../src/lib.rs"
required-features = ["3d"]
bench = false


[dependencies]

[dependencies.avian3d]
git = "https://github.com/Jondolf/avian"
default-features = false


[dependencies.bevy]
version = "0.14.1"
default-features = false

[dev-dependencies]
bevy = { version = "0.14", features = ["wayland", "dynamic_linking"] }
avian3d = { git = "https://github.com/Jondolf/avian" }
