[package]
name = "avian_interpolation3d"
version = "0.1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "/docs/",
    "/.github/",
]
readme = "../readme.md"
repository = "https://github.com/janhohenheim/avian_interpolation"

[features]
default = [
    "3d",
    "avian3d/f32",
    "avian3d/parry-f32",
]
3d = []
serialize = [
    "dep:serde",
    "bevy/serialize",
    "avian3d/serialize",
]

[lib]
name = "avian_interpolation3d"
path = "../../src/lib.rs"
bench = false


[dependencies]
serde = { version = "1.0.210", optional = true}

[dependencies.avian3d]
git = "https://github.com/Jondolf/avian"
default-features = false
features = [
    "3d",
]

[dependencies.bevy]
version = "0.14.2"
default-features = false

[dev-dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
avian3d = { git = "https://github.com/Jondolf/avian" }
